# Test-Tasks

Task1/FileManager/: CMakeLists.txt  DependencyGraph.cpp  DependencyGraph.h  FileContent.cpp  FileContent.h  FileUtils.cpp  FileUtils.h  README.md  main.cpp
Task2/StudentsDB/: CMakeLists.txt  README.md  index.html  main.cpp
Task3/TodoList/: README.md  index.html  main.js  package-lock.json  package.json  script.js  server.js  styles.css
Task3/TodoList/my-proxy-server/: package-lock.json  package.json
